[template] Changed mocks port to 8181 cause 9090 is prometheus
* Updated some more dependencies
* Updated gatling and made some relevant changes